# rsoup

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: context_recursive_extractor_benchmark.rs
rsoup/: rsoup.pyi
scripts/: gen_data.py  test_table_extractor.py
src/: context.rs  error.rs  helper.rs  lib.rs  table.mrs  table.rs  table_extractor.rs
src/extractors/: context_v1.rs  mod.rs  subtree.rs  table.rs  url_converter.rs
src/misc/: mod.rs  recursive_iter.rs
src/misc/tree/: iterator.rs  simple_tree.rs
src/models/: content_hierarchy.rs  rich_text.rs
src/models/table/: cell.rs  cell_iter.rs  row.rs  table.rs
src/table/: cell.rs  cell_iter.rs  mod.rs  row.rs  table.rs
src/text/: get_rich_text.rs  get_text_v1.rs  get_text_with_trace.rs  line.rs  mod.rs  rich_text.rs  trace.rs
table_extractor/: fetch_tables.py
table_extractor/python/: context_extractor.py  table_extractor.py
table_extractor/python/models/: html_table.py
tests/: conftest.py  main.rs  test_context_extractor.rs  test_extractor.py  test_extractor.rs  test_text.rs  test_text_extractor.rs
tests/common/: mod.rs
tests/models/: test_pickle.py
tests/resources/: parser.html
tests/resources/wikipedia/: List_of_highest_mountains_on_Earth.html
