[project]
name = "web-table-extractor"
version = "1.3.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = [
    'pytest >= 6.2.5, < 7.0.0',
    'pytest-cov >= 3.0.0, < 4.0.0',
    'black >= 22.3.0, < 23.0.0',
]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"